--- a/README
+++ b/README
@@ -25,7 +25,7 @@ Usage
 
 Example:
 
-./yadi "host=localhost port=5432 user=test password=test dbname=test_db"
+./yadi -c "host=localhost port=5432 user=test password=test dbname=test_db"
 
 
 ---------------------------------------------------------------------------
